cmake_minimum_required(VERSION 3.16.0)

file(GLOB_RECURSE headers CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include/vel/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/include/vel/*.hpp")
file(GLOB_RECURSE sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/vel/*.cpp")

add_library(VEL3D_LIBRARY STATIC ${headers} ${sources})
add_dependencies(VEL3D_LIBRARY ${libGLFW} GLAD_LIBRARY ${libGLM} ${libAssimp} ${libBullet} ${libJson} ${libStbHeaders} IMGUI_LIBRARY)
set(VEL3D_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)

set_target_properties(VEL3D_LIBRARY PROPERTIES 
	CXX_STANDARD 17
	ARCHIVE_OUTPUT_DIRECTORY ${INSTALL_ROOT}/vel3d/lib
)

if(USE_NVIDIA_API)
	add_dependencies(VEL3D_LIBRARY NVAPI_LIBRARY)
endif()

target_include_directories(VEL3D_LIBRARY PUBLIC 
	${VEL3D_INCLUDE_DIR}
	${GLFW_INCLUDE_DIR}
	${GLAD_INCLUDE_DIR}
	${GLM_INCLUDE_DIR}
	${ASSIMP_INCLUDE_DIR}
	${BULLET_INCLUDE_DIR}
	${JSON_INCLUDE_DIR}
	${STBHEADERS_INCLUDE_DIR}
	${IMGUI_INCLUDE_DIR}
)

if(USE_NVIDIA_API)
	target_include_directories(VEL3D_LIBRARY PUBLIC ${NVAPI_INCLUDE_DIR})
endif()

target_link_libraries(VEL3D_LIBRARY PUBLIC
	GLFW_LIBRARY 
	GLAD_LIBRARY
	ASSIMP_LIBRARY
	IRRXML_LIBRARY
	ZLIB_LIBRARY
	BULLET_COLLISION_LIBRARY
	BULLET_DYNAMICS_LIBRARY
	BULLET_INVERSE_DYNAMICS_LIBRARY
	BULLET_SOFT_BODY_LIBRARY
	LINEAR_MATH_LIBRARY
	IMGUI_LIBRARY
)

if(USE_NVIDIA_API)
	target_link_libraries(VEL3D_LIBRARY PUBLIC NVAPI_LIBRARY)
endif()